apps/production/angular-regular/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dp-app-angular
  # namespace: ns-angular-regular-production
  labels:
    name: web
    app: app-angular-production
spec:
  replicas: 2
  selector:
      matchLabels:
        name: app-angular-production
  template:
    metadata:
      labels:
        name: app-angular-production
    spec:
      containers:
      - name: angular-production 
        image: haroldo89/front-app:69
        ports:
        - containerPort: 80
