apps/production/angular-regular/service-patch.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-app-angular
  labels:
    name: service-app-angular
    app: app-angular-production
spec:
  selector:
    name: app-angular-production
