apps/production/angular-regular/ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-app-angular
  labels:
    name: ingress-angular-production
